# Plotter

./: .devenv.flake.nix  .gitignore  README.md  config.toml  devenv.nix  pyproject.toml  requirements.txt
.devenv/: devenv.json  flake.json  profile  run
.devenv/gc/: shell-2-link
